input data veryfying done

--- a/homeBudget.cbp
+++ b/homeBudget.cbp
@@ -34,11 +34,13 @@
 		</Compiler>
 		<Unit filename="Markup.cpp" />
 		<Unit filename="Markup.h" />
+		<Unit filename="dateCheck.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="operation.cpp" />
 		<Unit filename="operation.h" />
 		<Unit filename="operations.cpp" />
 		<Unit filename="operations.h" />
+		<Unit filename="programMessages.h" />
 		<Unit filename="user.cpp" />
 		<Unit filename="user.h" />
 		<Unit filename="users.cpp" />
